@@ -443,6 +443,10 @@ ext/pperl/splashfast/t/02_use.t
 ext/pperl/splashfast/t/03_new.t
 ext/pperl/splashfast/t/04_app.t
 
+ext/pperl/textval/Makefile.PL
+ext/pperl/textval/TextValidator.pm
+ext/pperl/textval/t/01_load.t
+
 ext/xrc/Makefile.PL
 ext/xrc/XRC.xs
 ext/xrc/XS/XmlDocument.xsp
@@ -480,44 +484,45 @@ demo/Printing.pm
 demo/Unicode.pm
 demo/XRC.pm
 demo/XRCCustom.pm
+demo/data/cat.pl
+demo/data/dummy.pl
+demo/data/fileopen.gif
+demo/data/filesave.gif
 demo/data/fs.zip
+demo/data/fuzzy.gif
 demo/data/html/index.html
 demo/data/html/page.html
 demo/data/locale/en/wxperl_demo.po
 demo/data/locale/fr/wxperl_demo.po
 demo/data/locale/it/wxperl_demo.po
-demo/data/resource.xrc
 demo/data/logo.jpg
-demo/data/cat.pl
-demo/data/dummy.pl
-demo/data/fileopen.gif
-demo/data/filesave.gif
-demo/data/fuzzy.gif
 demo/data/quotes.gif
+demo/data/resource.xrc
 demo/data/update.gif
 demo/demo.pl
 demo/splash.pl
+demo/wxBoxSizer.pm
 demo/wxCalendarCtrl.pm
 demo/wxCheckListBox.pm
 demo/wxClipboard.pm
 demo/wxDatePickerCtrl.pm
 demo/wxFileSystem.pm
+demo/wxFlexGridSizer.pm
 demo/wxGrid.pm
 demo/wxGridCER.pm
 demo/wxGridER.pm
+demo/wxGridSizer.pm
 demo/wxGridTable.pm
 demo/wxHtmlDynamic.pm
 demo/wxHtmlTag.pm
 demo/wxHtmlWindow.pm
 demo/wxListCtrl.pm
 demo/wxLocale.pm
+demo/wxNotebookSizer.pm
 demo/wxProcess.pm
 demo/wxSTC.pm
-demo/wxThread.pm
-demo/wxBoxSizer.pm
-demo/wxGridSizer.pm
-demo/wxFlexGridSizer.pm
-demo/wxNotebookSizer.pm
-demo/wxWizard.pm
 demo/wxScrollBar.pm
 demo/wxScrolledWindow.pm
+demo/wxThread.pm
+demo/wxValidator.pm
+demo/wxWizard.pm
