@@ -4,8 +4,8 @@
 ## Author:      Mattia Barbon
 ## Modified by:
 ## Created:     04/07/2002
-## RCS-ID:      $Id: Makefile.PL,v 1.4 2004/10/19 20:28:10 mbarbon Exp $
-## Copyright:   (c) 2002 Mattia Barbon
+## RCS-ID:      $Id: Makefile.PL,v 1.5 2005/08/15 21:44:34 mbarbon Exp $
+## Copyright:   (c) 2002, 2005 Mattia Barbon
 ## Licence:     This program is free software; you can redistribute it and/or
 ##              modify it under the same terms as Perl itself
 #############################################################################
@@ -13,7 +13,7 @@
 use ExtUtils::MakeMaker;
 
 WriteMakefile( NAME => 'Wx::Perl',
-               DIR  => [ 'splashfast', 'carp' ] );
+               DIR  => [ qw(splashfast carp textval) ] );
 
 # local variables:
 # mode: cperl
